Add support for default seo theme.

--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,7 @@ dump.rdb
 server/liveblog/themes/themes_assets/*
 !server/liveblog/themes/themes_assets/angular
 !server/liveblog/themes/themes_assets/classic
+!server/liveblog/themes/themes_assets/default
 
 # Vim stuff
 *.swo
