--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,8 @@
     "env": {
         "browser": true,
         "node": true,
-        "amd": true
+        "amd": true,
+        "es6": true
     },
 
     "globals": {
@@ -36,8 +37,8 @@
         "no-empty": 2,
         "no-ex-assign": 2,
         "no-extra-boolean-cast": 2,
-        "no-extra-parens": 1,
-        "no-extra-semi": 1,
+        "no-extra-parens": 2,
+        "no-extra-semi": 2,
         "no-func-assign": 2,
         "no-inner-declarations": 2,
         "no-irregular-whitespace": 2,
@@ -50,12 +51,12 @@
         "accessor-pairs": 2,
         "array-callback-return": 2,
         "block-scoped-var": 1,
-        "complexity": [1, 15],
-        "curly": 1,
+        "complexity": [2, 10],
+        "curly": 2,
         "dot-location": [2, "property"],
         "dot-notation": 2,
         "eqeqeq": 2,
-        "no-alert": 1,
+        "no-alert": 2,
         "no-caller": 2,
         "no-case-declarations": 2,
         "no-else-return": 2,
@@ -85,14 +86,14 @@
         "no-unmodified-loop-condition": 2,
         "no-useless-call": 2,
         "no-useless-concat": 2,
-        "no-useless-return": 1,
+        "no-useless-return": 2,
         "no-void": 2,
         "no-with": 2,
         "radix": 1,
         "yoda": 2,
 
         "no-shadow-restricted-names": 2,
-        "no-unused-vars": [1, {"vars": "all", "args": "none"}],
+        "no-unused-vars": [2, {"vars": "all", "args": "none"}],
         "no-undef": 2,
         "no-undef-init": 2,
         "no-use-before-define": 0,
@@ -104,10 +105,9 @@
         "comma-spacing": 1,
         "comma-style": 1,
         "computed-property-spacing": 2,
-        "consistent-this": [1, "self"],
+        "consistent-this": [2, "self"],
         "func-call-spacing": 2,
-        "indent": [1, 2],
-        "jsx-quotes": 2,
+        "indent": [2, 2],
         "key-spacing": 2,
         "keyword-spacing": 2,
         "linebreak-style": [2, "unix"],
@@ -130,7 +130,7 @@
         "quotes": [1, "single"],
         "require-jsdoc": 0,
         "semi-spacing": 2,
-        "semi": [1, "always"],
+        "semi": [2, "always"],
         "space-before-blocks": 1,
         "space-before-function-paren": [1, "never"],
         "space-in-parens": [1, "never"],
@@ -149,7 +149,7 @@
         "no-useless-rename": 2,
         "no-var": 0,
         "object-shorthand": [2, "consistent"],
-        "prefer-arrow-callback": [1, {"allowNamedFunctions": true}],
+        "prefer-arrow-callback": [2, {"allowNamedFunctions": true}],
         "prefer-spread": 1,
         "rest-spread-spacing": 2,
         "template-curly-spacing": 2,
