--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "promise-polyfill": "^6.0.2"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^7.3.0",
     "del": "^2.2.0",
     "eslint": "^3.19.0",
     "graceful-fs": "^4.1.4",
