LBSD-1692: resolve naming issues with template context vars. (#34)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,8 +12,8 @@
         "instgrm": false,
         "twttr": false,
         "settings": false,
-        "theme": false,
-        "theme_json": false
+        "options": false,
+        "json_options": false
     },
 
     "parserOptions": {
