--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,7 @@ server/liveblog/themes/themes_assets/*
 !server/liveblog/themes/themes_assets/angular
 !server/liveblog/themes/themes_assets/classic
 !server/liveblog/themes/themes_assets/default
+!server/liveblog/themes/themes_assets/amp
 
 # Vim stuff
 *.swo
@@ -84,3 +85,9 @@ server/test-env.local
 
 # Vagrant
 .vagrant
+
+# Jinja2 compiled templates
+.jinja2
+
+# Theme uploads
+themes/*
