--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,6 @@ env:
 
 services:
     - mongodb
-    - elasticsearch
     - redis-server
 
 addons:
@@ -43,7 +42,10 @@ cache:
     - $HOME/.npm
 
 before_install:
-    - nvm install node
+    - sudo apt-get -qq update
+    - sudo apt-get purge elasticsearch
+    - sudo apt-get install -t stable elasticsearch
+    - nvm install --lts node
     - nvm use node
     - node --version
     - npm config set loglevel warn
