--- a/.travis.yml
+++ b/.travis.yml
@@ -66,11 +66,12 @@ before_script:
     - ./scripts/elastic.sh
     - sudo service elasticsearch restart && sleep 10
     - cd $TRAVIS_BUILD_DIR/server
-    - (nohup env LOG_CONFIG_FILE='../logging_travis_config.yml' SUPERDESK_URL='http://localhost:5000/api' SUPERDESK_CLIENT_URL='http://localhost:9000' WEB_CONCURRENCY=3 WEB_TIMEOUT=8 SUPERDESK_TESTING='True' honcho start &)
+    - (nohup env LOG_CONFIG_FILE='../logging_travis_config.yml' MAIL_PORT=2225 SUPERDESK_URL='http://localhost:5000/api' SUPERDESK_CLIENT_URL='http://localhost:9000' WEB_CONCURRENCY=3 WEB_TIMEOUT=8 SUPERDESK_TESTING='True' honcho start &)
     - cd $TRAVIS_BUILD_DIR/client
     - MARKETPLACE=true SYNDICATION=true grunt build --server='http://localhost:5000/api' --ws='ws://localhost:5100'
     - cd dist
     - while [ ! -f index.html ]; do sleep .5; done
+    - (nohup sudo python3 -m smtpd -n -c DebuggingServer localhost:2225 &)
     - (nohup python3 -m http.server 9000 &)
 
 script:
