Enable custom logging for travis build.

--- a/logging_travis_config.yml
+++ b/logging_travis_config.yml
@@ -1,7 +1,13 @@
 version: 1
-disable_existing_loggers: false
+disable_existing_loggers: true
 loggers:
- "":
-  level: WARNING
  superdesk:
+  level: WARNING
+ superdesk.websockets_comms:
+  level: WARNING
+ flask.ext.cors:
+  level: WARNING
+ elasticsearch:
+  level: WARNING
+ ldap:
   level: WARNING
