Squashed 'server/liveblog/themes/themes_assets/default/' changes from 79710ac..0ee0ccd
0ee0ccd Feature/output advertisements (#53)
9c24660 New text for pinned post

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: 0ee0ccd2b6bfaf0b6abe2bdb20b2bf09240fa4f6

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "browserify": "^13.0.0",
+    "moment": "^2.18.1",
     "nunjucks": "^3.0.0",
     "nunjucksify": "^2.2.0",
     "promise-polyfill": "^6.0.2"
