--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^3.19.0",
     "graceful-fs": "^4.1.4",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.0.0",
     "gulp-eslint": "^3.0.1",
     "gulp-html-replace": "^1.6.1",
