--- a/package.json
+++ b/package.json
@@ -3,25 +3,21 @@
   "version": "0.1.42",
   "description": "Liveblog 3 SEO theme",
   "author": "Paul Solbach <psolbach@dpa-newslab.com>, Massimo Scamarcia <massimo.scamarcia@sourcefabric.org>",
-  "license": "UNLICENSED",
+  "license": "AGPL-3.0",
   "main": "js/liveblog.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "browserify": "^13.0.0",
-    "moment": "^2.18.1",
-    "nunjucks": "^3.0.0",
-    "nunjucksify": "^2.2.0",
-    "promise-polyfill": "^6.0.2"
-  },
-  "devDependencies": {
+    "amphtml-validator": "^1.0.20",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
+    "browserify": "^13.0.0",
     "del": "^2.2.0",
     "eslint": "^3.19.0",
     "graceful-fs": "^4.1.4",
     "gulp": "^3.9.1",
+    "gulp-clean-css": "^3.0.4",
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.0.0",
     "gulp-eslint": "^3.0.1",
@@ -38,8 +34,13 @@
     "gulp-replace": "^0.5.4",
     "gulp-rev": "^7.1.0",
     "gulp-uglify": "^1.5.1",
-    "gulp-util": "^3.0.7",
+    "gulp-util": "^3.0.8",
     "gulp-watch": "^4.3.5",
+    "moment": "^2.18.1",
+    "nunjucks": "^3.0.0",
+    "nunjucks-date-filter": "^0.1.1",
+    "nunjucksify": "^2.2.0",
+    "promise-polyfill": "^6.0.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   }
