--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-minify-css": "^1.2.1",
     "gulp-ng-annotate": "^2.0.0",
     "gulp-nunjucks": "^3.0.0",
+    "gulp-purifycss": "^0.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
     "gulp-rev": "^7.1.0",
