Squashed 'server/liveblog/themes/themes_assets/default/' changes from 8be0068..ad39ac1
ad39ac1 chore: build.
d88cc65 Merge pull request #85 from liveblog/fix/amp-render-local
3c3fcc5 Merge pull request #84 from aleksandarjelicic/changes
a560ce9 fix: amp not rendering images on watch instance.
a73e353 embed icons fix, comment pop up fix, responsive author fix
7ec92fa Merge pull request #83 from liveblog/iframe
4205bbe Added iframe resizer

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: ad39ac15fae91d3dfdfee468e2b51f36ab0fa3a3

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-uglify": "^1.5.1",
     "gulp-util": "^3.0.8",
     "gulp-watch": "^4.3.5",
+    "iframe-resizer": "^3.5.14",
     "moment": "^2.18.1",
     "nunjucks": "^3.0.0",
     "nunjucks-date-filter": "^0.1.1",
