--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "liveblog",
-  "version": "3.3.1",
+  "version": "3.3.4",
   "repository": {
     "type": "git",
     "url": "git@github.com:liveblog/liveblog.git"
@@ -34,23 +34,23 @@
     "grunt-contrib-requirejs": "0.4.4",
     "grunt-contrib-uglify": "0.9.2",
     "grunt-contrib-watch": "0.6.1",
-    "grunt-eslint": "^19.0.0",
+    "grunt-eslint": "^20.1.0",
     "grunt-filerev": "2.3.1",
     "grunt-jscs": "1.8.0",
-    "grunt-karma": "0.12.0",
+    "grunt-karma": "2.0.0",
     "grunt-karma-coveralls": "2.5.4",
     "grunt-open": "0.2.3",
     "grunt-template": "0.2.3",
     "grunt-usemin": "3.1.1",
     "grunt-webpack": "^1.0.14",
-    "jasmine-reporters": "2.0.6",
+    "jasmine-reporters": "~2.2.1",
     "json-loader": "^0.5.4",
-    "karma": "0.13.9",
-    "karma-chrome-launcher": "0.2.0",
-    "karma-coverage": "0.5.0",
-    "karma-jasmine": "0.3.6",
+    "karma": "1.7.1",
+    "karma-chrome-launcher": "2.2.0",
+    "karma-coverage": "1.1.1",
+    "karma-jasmine": "1.1.0",
     "karma-junit-reporter": "0.3.3",
-    "karma-ng-html2js-preprocessor": "0.1.2",
+    "karma-ng-html2js-preprocessor": "1.0.0",
     "karma-phantomjs-launcher": "1.0.2",
     "karma-requirejs": "0.2.2",
     "load-grunt-config": "0.17.1",
@@ -58,7 +58,7 @@
     "ngtemplate-loader": "^1.3.1",
     "node-sass": "^4.3.0",
     "phantomjs": "^2.1.3",
-    "protractor": "^4.0.13",
+    "protractor": "^5.1.2",
     "protractor-flake": "^2.3.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
@@ -73,39 +73,43 @@
   },
   "dependencies": {
     "adblock-detect": "^1.0.5",
-    "angular": "^1.5.8",
-    "angular-animate": "^1.6.1",
+    "angular": "1.6.6",
+    "angular-animate": "1.6.6",
     "angular-bootstrap-npm": "jusopi/angular-bootstrap-npm#0.13.1",
-    "angular-contenteditable": "0.0.2",
-    "angular-embed": "^2.1.1",
+    "angular-contenteditable": "0.3.9",
+    "angular-embed": "superdesk/angular-embed#b2b4a69",
     "angular-embedly": "Urigo/angular-embedly#0.0.8",
-    "angular-gettext": "^2.3.8",
+    "angular-gettext": "2.3.10",
     "angular-messages": "^1.5.8",
-    "angular-mocks": "^1.6.1",
-    "angular-moment": "^1.0.1",
-    "angular-resource": "^1.5.8",
-    "angular-route": "^1.5.8",
-    "angular-vs-repeat": "^1.1.7",
-    "bootstrap": "^3.1.1",
+    "angular-mocks": "1.6.6",
+    "angular-moment": "1.1.0",
+    "angular-resource": "1.6.6",
+    "angular-route": "1.6.6",
+    "angular-vs-repeat": "1.1.7",
+    "bootstrap": "3.3.7",
     "eventable": "0.0.0",
-    "gridster": "^0.5.6",
-    "jquery": "^2.2.3",
-    "jquery-jcrop": "^0.9.13",
+    "gridster": "0.5.6",
+    "jquery": "2.2.4",
+    "jquery-jcrop": "0.9.13",
     "jquery-ui": "components/jqueryui#1.11.4",
     "jquery.gridster": "dustmoo/gridster.js#c306335397816beceb74e4a176067baef34a0359",
-    "lodash": "^4.14.1",
+    "lodash": "4.17.4",
     "lodash.sortbyorder": "^3.4.4",
     "lr-infinite-scroll": "^1.0.0",
-    "medium-editor": "^5.21.0",
-    "medium-editor-tables": "^0.5.3",
-    "ment.io": "^0.9.23",
-    "moment": "2.10.6",
-    "moment-timezone": "^0.5.5",
-    "ng-file-upload": "^12.2.11",
+    "medium-editor": "5.23.2",
+    "medium-editor-tables": "0.6.1",
+    "ment.io": "0.9.23",
+    "moment": "2.19.2",
+    "moment-timezone": "0.5.14",
+    "ng-file-upload": "11.2.3",
     "ng-sir-trevor": "superdesk/ng-sir-trevor",
-    "rangy": "^1.3.0",
-    "raven-js": "^3.9.1",
+    "rangy": "1.3.0",
+    "raven-js": "3.17.0",
     "sir-trevor": "m0g/sir-trevor-js#liveblog",
-    "superdesk-core": "liveblog/superdesk-client-core#bd052590f93e1bcba88049cb404060c84ffa4363"
+    "superdesk-core": "liveblog/superdesk-client-core#final"
+  },
+  "engines": {
+    "node": ">=6.6.0 <7.0.0",
+    "npm": ">=3.10 <4.0.0"
   }
 }
