--- a/client/package.json
+++ b/client/package.json
@@ -12,28 +12,30 @@
     }
   ],
   "devDependencies": {
-    "babel-core": "^6.10.4",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-react": "^6.16.0",
-    "bluebird": "^3.4.6",
-    "btoa": "^1.1.2",
-    "css-loader": "^0.23.1",
-    "eslint-loader": "^1.6.1",
-    "eslint-plugin-angular": "^1.4.1",
-    "file-loader": "^0.9.0",
-    "grunt": "^0.4.2",
-    "grunt-angular-gettext": "2.1.3",
-    "grunt-angular-templates": "0.5.7",
-    "grunt-contrib-clean": "0.6.0",
-    "grunt-contrib-concat": "0.5.1",
-    "grunt-contrib-connect": "0.11.2",
-    "grunt-contrib-copy": "0.8.1",
-    "grunt-contrib-cssmin": "0.13.0",
-    "grunt-contrib-jshint": "0.11.1",
-    "grunt-contrib-requirejs": "0.4.4",
-    "grunt-contrib-uglify": "0.9.2",
-    "grunt-contrib-watch": "0.6.1",
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "bootstrap": "3.3.7",
+    "btoa": "1.1.2",
+    "classnames": "2.2.5",
+    "css-loader": "0.28.7",
+    "eslint": "^4.7.0",
+    "eslint-loader": "^1.9.0",
+    "eslint-plugin-angular": "1.6.4",
+    "grunt": "1.0.1",
+    "grunt-angular-gettext": "2.3.6",
+    "grunt-angular-templates": "1.1.0",
+    "grunt-contrib-clean": "1.1.0",
+    "grunt-contrib-concat": "1.0.1",
+    "grunt-contrib-connect": "1.0.2",
+    "grunt-contrib-copy": "1.0.0",
+    "grunt-contrib-cssmin": "2.2.1",
+    "grunt-contrib-less": "1.4.1",
+    "grunt-contrib-uglify": "3.1.0",
+    "grunt-contrib-watch": "1.0.0",
     "grunt-eslint": "^20.1.0",
     "grunt-filerev": "2.3.1",
     "grunt-jscs": "1.8.0",
@@ -42,31 +44,32 @@
     "grunt-open": "0.2.3",
     "grunt-template": "0.2.3",
     "grunt-usemin": "3.1.1",
-    "grunt-webpack": "^1.0.14",
+    "grunt-webpack": "3.0.2",
     "jasmine-reporters": "~2.2.1",
-    "json-loader": "^0.5.4",
+    "json-loader": "0.5.7",
     "karma": "1.7.1",
     "karma-chrome-launcher": "2.2.0",
     "karma-coverage": "1.1.1",
+    "jasmine-core": "2.8.0",
     "karma-jasmine": "1.1.0",
     "karma-junit-reporter": "0.3.3",
     "karma-ng-html2js-preprocessor": "1.0.0",
     "karma-phantomjs-launcher": "1.0.2",
     "karma-requirejs": "0.2.2",
-    "load-grunt-config": "0.17.1",
-    "load-grunt-tasks": "3.2.0",
-    "ngtemplate-loader": "^1.3.1",
-    "node-sass": "^4.3.0",
+    "load-grunt-config": "0.19.2",
+    "load-grunt-tasks": "3.5.2",
+    "ngtemplate-loader": "2.0.1",
+    "node-sass": "4.5.3",
     "phantomjs": "^2.1.3",
     "protractor": "^5.1.2",
     "protractor-flake": "^2.3.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "request": "^2.79.0",
-    "sass-loader": "^4.1.1",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.16.1"
+    "sass-loader": "6.0.6",
+    "style-loader": "0.19.0",
+    "webpack": "3.6.0",
+    "webpack-dev-server": "2.8.2"
   },
   "scripts": {
     "test": "grunt ci:travis"
@@ -74,20 +77,20 @@
   "dependencies": {
     "adblock-detect": "^1.0.5",
     "angular": "1.6.6",
-    "angular-animate": "1.6.6",
+    "angular-animate": "1.6.1",
     "angular-bootstrap-npm": "jusopi/angular-bootstrap-npm#0.13.1",
     "angular-contenteditable": "0.3.9",
     "angular-embed": "superdesk/angular-embed#b2b4a69",
     "angular-embedly": "Urigo/angular-embedly#0.0.8",
     "angular-gettext": "2.3.10",
-    "angular-messages": "^1.5.8",
+    "angular-messages": "1.6.6",
     "angular-mocks": "1.6.6",
     "angular-moment": "1.1.0",
     "angular-resource": "1.6.6",
     "angular-route": "1.6.6",
     "angular-vs-repeat": "1.1.7",
     "bootstrap": "3.3.7",
-    "eventable": "0.0.0",
+    "eventable": "madebymany/eventable",
     "gridster": "0.5.6",
     "jquery": "2.2.4",
     "jquery-jcrop": "0.9.13",
