--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,5 +1,6 @@
 {
     "plugins": [
+        "react",
         "angular"
     ],
 
@@ -55,8 +56,8 @@
         "no-empty": 2,
         "no-ex-assign": 2,
         "no-extra-boolean-cast": 2,
-        "no-extra-parens": 1,
-        "no-extra-semi": 1,
+        "no-extra-parens": 2,
+        "no-extra-semi": 2,
         "no-func-assign": 2,
         "no-inner-declarations": 2,
         "no-irregular-whitespace": 2,
@@ -68,13 +69,13 @@
         "valid-typeof": 2,
         "accessor-pairs": 2,
         "array-callback-return": 2,
-        "block-scoped-var": 1,
-        "complexity": [1, 15],
-        "curly": 1,
+        "block-scoped-var": 2,
+        "complexity": [2, 10],
+        "curly": 2,
         "dot-location": [2, "property"],
         "dot-notation": 2,
         "eqeqeq": 2,
-        "no-alert": 1,
+        "no-alert": 2,
         "no-caller": 2,
         "no-case-declarations": 2,
         "no-else-return": 2,
@@ -94,7 +95,7 @@
         "no-new-func": 2,
         "no-new-wrappers": 2,
         "no-octal": 2,
-        "no-param-reassign": 1,
+        "no-param-reassign": 2,
         "no-proto": 2,
         "no-redeclare": 2,
         "no-return-assign": 2,
@@ -104,60 +105,60 @@
         "no-unmodified-loop-condition": 2,
         "no-useless-call": 2,
         "no-useless-concat": 2,
-        "no-useless-return": 1,
+        "no-useless-return": 2,
         "no-void": 2,
         "no-with": 2,
-        "radix": 1,
+        "radix": 2,
         "yoda": 2,
 
         "strict": [2, "never"],
 
         "no-shadow-restricted-names": 2,
-        "no-unused-vars": [1, {"vars": "all", "args": "none"}],
+        "no-unused-vars": [2, {"vars": "all", "args": "none"}],
         "no-undef": 2,
         "no-undef-init": 2,
         "no-use-before-define": 0,
 
-        "array-bracket-spacing": [1, "never"],
-        "block-spacing": 1,
-        "brace-style": [1, "1tbs"],
-        "camelcase": [1, {"properties": "never"}],
-        "comma-spacing": 1,
-        "comma-style": 1,
+        "array-bracket-spacing": [2, "never"],
+        "block-spacing": 2,
+        "brace-style": [2, "1tbs"],
+        "camelcase": [2, {"properties": "never"}],
+        "comma-spacing": 2,
+        "comma-style": 2,
         "computed-property-spacing": 2,
-        "consistent-this": [1, "self"],
+        "consistent-this": [2, "self"],
         "func-call-spacing": 2,
-        "indent": [1, 4],
+        "indent": [2, 4],
         "jsx-quotes": 2,
         "key-spacing": 2,
         "keyword-spacing": 2,
         "linebreak-style": [2, "unix"],
-        "max-depth": [2, 5],
+        "max-depth": [2, 3],
         "max-len": [2, 120, 4],
         "new-parens": 2,
-        "newline-after-var": 1,
+        "newline-after-var": 2,
         "newline-per-chained-call": [2, {"ignoreChainWithDepth": 2}],
         "no-lonely-if": 2,
         "no-mixed-spaces-and-tabs": 2,
         "no-multiple-empty-lines": 2,
         "no-nested-ternary": 2,
-        "no-trailing-spaces": 1,
+        "no-trailing-spaces": 2,
         "no-underscore-dangle": 0,
         "no-unneeded-ternary": 2,
         "no-whitespace-before-property": 2,
-        "object-curly-spacing": [1, "never"],
-        "padded-blocks": [1, "never"],
-        "quote-props": [1, "as-needed"],
-        "quotes": [1, "single"],
+        "object-curly-spacing": [2, "never"],
+        "padded-blocks": [2, "never"],
+        "quote-props": [2, "as-needed"],
+        "quotes": [2, "single"],
         "require-jsdoc": 0,
         "semi-spacing": 2,
-        "semi": [1, "always"],
-        "space-before-blocks": 1,
-        "space-before-function-paren": [1, "never"],
-        "space-in-parens": [1, "never"],
-        "space-infix-ops": 1,
-        "space-unary-ops": 1,
-        "spaced-comment": 1,
+        "semi": [2, "always"],
+        "space-before-blocks": 2,
+        "space-before-function-paren": [2, "never"],
+        "space-in-parens": [2, "never"],
+        "space-infix-ops": 2,
+        "space-unary-ops": 2,
+        "spaced-comment": 2,
 
         "arrow-body-style": [2, "as-needed"],
         "arrow-parens": [2, "always"],
@@ -168,12 +169,14 @@
         "no-useless-computed-key": 2,
         "no-useless-constructor": 2,
         "no-useless-rename": 2,
-        "no-var": 0,
+        "no-var": 2,
         "object-shorthand": [2, "consistent"],
-        "prefer-arrow-callback": [1, {"allowNamedFunctions": true}],
-        "prefer-spread": 1,
+        "prefer-arrow-callback": [2, {"allowNamedFunctions": true}],
+        "prefer-spread": 2,
+        "prefer-const": 2,
         "rest-spread-spacing": 2,
         "template-curly-spacing": 2,
-        "yield-star-spacing": 2
+        "yield-star-spacing": 2,
+        "one-var": [2, "never"]
     }
 }
