--- a/client/package.json
+++ b/client/package.json
@@ -22,9 +22,9 @@
     "btoa": "1.1.2",
     "classnames": "2.2.5",
     "css-loader": "0.28.7",
-    "eslint": "^4.7.0",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-angular": "1.6.4",
+    "eslint": "4.11.0",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-angular": "3.1.1",
     "grunt": "1.0.1",
     "grunt-angular-gettext": "2.3.6",
     "grunt-angular-templates": "1.1.0",
@@ -36,7 +36,7 @@
     "grunt-contrib-less": "1.4.1",
     "grunt-contrib-uglify": "3.1.0",
     "grunt-contrib-watch": "1.0.0",
-    "grunt-eslint": "^20.1.0",
+    "grunt-eslint": "20.1.0",
     "grunt-filerev": "2.3.1",
     "grunt-jscs": "1.8.0",
     "grunt-karma": "2.0.0",
