--- a/client/package.json
+++ b/client/package.json
@@ -99,8 +99,8 @@
     "medium-editor": "^5.21.0",
     "medium-editor-tables": "^0.5.3",
     "ment.io": "^0.9.23",
-    "moment": "2.10.6",
-    "moment-timezone": "^0.5.5",
+    "moment": "2.19.3",
+    "moment-timezone": "0.5.14",
     "ng-file-upload": "^12.2.11",
     "ng-sir-trevor": "superdesk/ng-sir-trevor",
     "rangy": "^1.3.0",
