fix: update travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -85,6 +85,7 @@ script:
     - cd $TRAVIS_BUILD_DIR/server && flake8 ;
     - cd $TRAVIS_BUILD_DIR/client && npm test ;
     - cd $TRAVIS_BUILD_DIR/server
+    - python3 app_init_elastic.py ;
     - python3 manage.py app:initialize_data ;
     - python3 manage.py users:create -u admin -p admin -e 'admin@example.com' --admin ;
     - python3 manage.py register_local_themes ;
