--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "gulp-inject": "^4.0.0",
     "gulp-less": "^3.0.5",
     "gulp-load-plugins": "^1.2.0",
-    "gulp-minify-css": "^1.2.1",
     "gulp-ng-annotate": "^2.0.0",
     "gulp-nunjucks": "^3.0.0",
     "gulp-purifycss": "^0.2.0",
@@ -38,6 +37,7 @@
     "gulp-util": "^3.0.8",
     "gulp-watch": "^4.3.5",
     "iframe-resizer": "^3.5.14",
+    "lory.js": "^2.3.4",
     "moment": "^2.18.1",
     "nunjucks": "^3.0.0",
     "nunjucks-date-filter": "^0.1.1",
