--- a/client/package.json
+++ b/client/package.json
@@ -43,23 +43,23 @@
     "grunt-template": "0.2.3",
     "grunt-usemin": "3.1.1",
     "grunt-webpack": "^1.0.14",
-    "jasmine-reporters": "2.0.6",
+    "jasmine-reporters": "2.2.1",
     "json-loader": "^0.5.4",
-    "karma": "0.13.9",
-    "karma-chrome-launcher": "0.2.0",
+    "karma": "1.7.1",
+    "karma-chrome-launcher": "2.2.0",
     "karma-coverage": "0.5.0",
-    "karma-jasmine": "0.3.6",
+    "karma-jasmine": "1.1.1",
     "karma-junit-reporter": "0.3.3",
     "karma-ng-html2js-preprocessor": "0.1.2",
-    "karma-phantomjs-launcher": "1.0.2",
+    "karma-phantomjs-launcher": "1.0.4",
     "karma-requirejs": "0.2.2",
     "load-grunt-config": "0.17.1",
     "load-grunt-tasks": "3.2.0",
     "ngtemplate-loader": "^1.3.1",
     "node-sass": "^4.3.0",
     "phantomjs": "^2.1.3",
-    "protractor": "^4.0.13",
-    "protractor-flake": "^2.3.0",
+    "protractor": "5.2.1",
+    "protractor-flake": "3.0.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "request": "^2.79.0",
