--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,8 @@ cache:
     - $HOME/.npm
 
 before_install:
+    - nvm install 6.70
+    - nvm use 6.70
     - sudo apt-get -qq update --allow-unauthenticated
     - sudo apt-get purge -f elasticsearch
     - sudo apt-get install -t stable elasticsearch
