--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "eslint": "4.11.0",
     "eslint-loader": "1.9.0",
     "eslint-plugin-angular": "3.1.1",
+    "eslint-plugin-react": "^7.5.1",
     "grunt": "1.0.1",
     "grunt-angular-gettext": "2.3.6",
     "grunt-angular-templates": "1.1.0",
@@ -45,12 +46,12 @@
     "grunt-template": "0.2.3",
     "grunt-usemin": "3.1.1",
     "grunt-webpack": "3.0.2",
+    "jasmine-core": "2.8.0",
     "jasmine-reporters": "~2.2.1",
     "json-loader": "0.5.7",
     "karma": "1.7.1",
     "karma-chrome-launcher": "2.2.0",
     "karma-coverage": "1.1.1",
-    "jasmine-core": "2.8.0",
     "karma-jasmine": "1.1.0",
     "karma-junit-reporter": "0.3.3",
     "karma-ng-html2js-preprocessor": "1.0.0",
@@ -109,7 +110,7 @@
     "rangy": "1.3.0",
     "raven-js": "3.17.0",
     "sir-trevor": "m0g/sir-trevor-js#liveblog",
-    "superdesk-core": "liveblog/superdesk-client-core#final"
+    "superdesk-core": "superdesk/superdesk-client-core#v1.10.0"
   },
   "engines": {
     "node": ">=6.6.0 <7.0.0",
