--- a/.gitignore
+++ b/.gitignore
@@ -66,6 +66,8 @@ dump.rdb
 # PyCharm idea folders
 .idea/
 
+.editor-settings
+
 # Themes folder
 server/liveblog/themes/themes_assets/*
 !server/liveblog/themes/themes_assets/angular
@@ -91,4 +93,3 @@ server/test-env.local
 
 # Theme uploads
 themes/*
-
