Squashed 'server/liveblog/themes/themes_assets/default/' changes from 6a76521..e89b129
e89b129 Merge branch 'master' into feature/server-date
0aeacc0 Merge pull request #135 from ZeitOnline/feature/theme-testdata
eacdf94 Merge branch 'master' into feature/theme-testdata
98c882c feature: added `clientDatetimeOnly` theme settings.
cd16c77 feature: added datetimeRender to choose date render side.
c6847cc chore: rebuild.
5696ca9 Merge branch 'master' into feature/server-date
b86ccc3 feature: added `jsDateOnly` theme setting.
945c924 fix: date filter not loading in javascript.
1e0947b Change: german translation of the load more button
937b541 dev: use theme testdata, not parent theme testdata
0807309 Merge pull request #134 from liveblog/feature/autoprefixer
27e6be6 lint: consider maximum line length of 120
66181ff Delete orphaned LESS mixins
6050b87 Remove vendor prefixes from CSS
77824ef Add gulp plugin to prefix CSS with Autoprefixer
f48d876 Add repository to package.json to omit warning
3844780 fix: LBSD-1993 load more not triggered in special cases
f708826 update: gulpfile to load number of posts set in options.json
e43ec13 fix: slideshow breaking in one case

git-subtree-dir: server/liveblog/themes/themes_assets/default
git-subtree-split: e89b1293105eaedfee43dedc1e5331f2227b1c05

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "^3.19.0",
     "graceful-fs": "^4.1.4",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^4.1.0",
     "gulp-clean-css": "^3.0.4",
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.0.0",
@@ -45,5 +46,12 @@
     "promise-polyfill": "^6.0.2",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
+  },
+  "browserslist": [
+    "last 2 versions"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:liveblog/liveblog-default-theme"
   }
 }
