--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ env:
         - MAIL_USE_SSL=0
         - MAIL_DEBUG=1
         - MAIL_SUPPRESS_SEND=True
+        - secure: Ik9/slkC4NdMOKvH1Cf6Nu+iPFaJZNVvSDn0JMAqTORw2CTMLQhKUQuCUR8sYucr8JMAg2+EGf/kyN13IR32DHbFX/5w/QedJtuN/wl+VxWz1nAhDq8A+UwLkIVH+g9kmVJyYogxH3inouYRa0pKmV0D1B4ju1SlpKD4XSjceeM=
 
 services:
     - mongodb
