feature: moved package.json outside of client folder.

--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,13 @@ server/test-env.local
 
 # Theme uploads
 themes/*
+
+# Client
+/npm-debug.log
+/.settings
+/.project
+node_modules
+dist
+*.swp
+.tmp
+.sass-cache
