--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "liveblog-default-theme",
-  "version": "3.3.0",
+  "version": "3.3.40",
   "description": "Liveblog 3 SEO theme",
   "author": "Paul Solbach <psolbach@dpa-newslab.com>, Massimo Scamarcia <massimo.scamarcia@sourcefabric.org>",
   "license": "AGPL-3.0",
@@ -11,6 +11,7 @@
   "dependencies": {
     "amphtml-validator": "^1.0.20",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^13.0.0",
     "del": "^2.2.0",
