--- a/server/liveblog/themes/themes_assets/default/package.json
+++ b/server/liveblog/themes/themes_assets/default/package.json
@@ -6,7 +6,7 @@
   "license": "AGPL-3.0",
   "main": "js/liveblog.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "gulp"
   },
   "dependencies": {
     "amphtml-validator": "^1.0.20",
