--- a/server/liveblog/themes/themes_assets/angular/package.json
+++ b/server/liveblog/themes/themes_assets/angular/package.json
@@ -2,6 +2,9 @@
   "name": "angular",
   "description": "Angular Liveblog Toolkit",
   "main": "main.js",
+  "scripts": {
+    "build": "gulp build"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/liveblog/lb-theme-angular.git"
