--- a/server/liveblog/themes/themes_assets/angular/package.json
+++ b/server/liveblog/themes/themes_assets/angular/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "angular",
+  "name": "lb-theme-angular",
   "description": "Angular Liveblog Toolkit",
+  "version": "3.3.4",
   "main": "main.js",
   "scripts": {
     "build": "gulp build"
