--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -1,7 +1,8 @@
 {
     "plugins": [
+        "angular",
+        "jasmine",
         "react",
-        "angular"
     ],
 
     "env": {
@@ -24,8 +25,7 @@
         "inject": false,
         "moment": false,
         "protractor": false,
-        "requirejs": false,
-        "__SUPERDESK_CONFIG__": true
+        "requirejs": false
     },
 
     "parserOptions": {
@@ -40,52 +40,38 @@
         }
     },
 
+    "extends": [
+        "eslint:recommended",
+        "plugin:react/recommended",
+        "plugin:jasmine/recommended",
+    ],
+
     "rules": {
-        "angular/di-unused": 2,
         "angular/empty-controller": 2,
         "angular/no-cookiestore": 2,
         "angular/no-http-callback": 2,
 
-        "no-cond-assign": 2,
-        "no-console": [2, {"allow": ["warn", "error", "info"]}],
-        "no-constant-condition": 2,
-        "no-debugger": 2,
-        "no-dupe-args": 2,
-        "no-dupe-keys": 2,
-        "no-duplicate-case": 2,
-        "no-empty": 2,
-        "no-ex-assign": 2,
-        "no-extra-boolean-cast": 2,
-        "no-extra-parens": 2,
-        "no-extra-semi": 2,
-        "no-func-assign": 2,
-        "no-inner-declarations": 2,
-        "no-irregular-whitespace": 2,
-        "no-obj-calls": 2,
-        "no-unexpected-multiline": 2,
-        "no-unreachable": 2,
-        "no-unsafe-negation": 2,
-        "use-isnan": 2,
-        "valid-typeof": 2,
-        "accessor-pairs": 2,
+        "react/no-did-update-set-state": 2,
+        "react/no-direct-mutation-state": 2,
+        "react/no-multi-comp": 2,
+        "react/self-closing-comp": 2,
+        "react/prefer-es6-class": 2,
+
+        // deprecated apis
+        "react/no-find-dom-node": 1,
+        "react/no-string-refs": 1,
+
         "array-callback-return": 2,
         "block-scoped-var": 2,
-        "complexity": [2, 10],
-        "curly": 2,
-        "dot-location": [2, "property"],
-        "dot-notation": 2,
-        "eqeqeq": 2,
+        "complexity": [1, 10],
         "no-alert": 2,
         "no-caller": 2,
-        "no-case-declarations": 2,
-        "no-else-return": 2,
+        "no-console": ["error", {"allow": ["info", "warn", "error"]}],
         "no-empty-function": 2,
-        "no-empty-pattern": 2,
         "no-eval": 2,
         "no-extend-native": 2,
         "no-extra-bind": 2,
         "no-floating-decimal": 2,
-        "no-global-assign": 2,
         "no-implied-eval": 2,
         "no-iterator": 2,
         "no-labels": 2,
@@ -94,17 +80,14 @@
         "no-multi-str": 2,
         "no-new-func": 2,
         "no-new-wrappers": 2,
-        "no-octal": 2,
         "no-param-reassign": 2,
         "no-proto": 2,
-        "no-redeclare": 2,
-        "no-return-assign": 2,
         "no-script-url": 2,
-        "no-self-assign": 2,
         "no-self-compare": 2,
         "no-unmodified-loop-condition": 2,
         "no-useless-call": 2,
         "no-useless-concat": 2,
+        "no-useless-escape": 1,
         "no-useless-return": 2,
         "no-void": 2,
         "no-with": 2,
@@ -115,10 +98,13 @@
 
         "no-shadow-restricted-names": 2,
         "no-unused-vars": [2, {"vars": "all", "args": "none"}],
-        "no-undef": 2,
         "no-undef-init": 2,
-        "no-use-before-define": 0,
 
+        // jasmine
+        "jasmine/new-line-before-expect": 0,
+        "jasmine/new-line-between-declarations": 0,
+
+        // style
         "array-bracket-spacing": [2, "never"],
         "block-spacing": 2,
         "brace-style": [2, "1tbs"],
@@ -139,7 +125,6 @@
         "newline-after-var": 2,
         "newline-per-chained-call": [2, {"ignoreChainWithDepth": 2}],
         "no-lonely-if": 2,
-        "no-mixed-spaces-and-tabs": 2,
         "no-multiple-empty-lines": 2,
         "no-nested-ternary": 2,
         "no-trailing-spaces": 2,
@@ -163,20 +148,15 @@
         "arrow-body-style": [2, "as-needed"],
         "arrow-parens": [2, "always"],
         "arrow-spacing": 2,
-        "constructor-super": 2,
-        "no-class-assign": 2,
-        "no-const-assign": 2,
         "no-useless-computed-key": 2,
         "no-useless-constructor": 2,
         "no-useless-rename": 2,
-        "no-var": 2,
+        "no-var": 0,
         "object-shorthand": [2, "consistent"],
         "prefer-arrow-callback": [2, {"allowNamedFunctions": true}],
         "prefer-spread": 2,
-        "prefer-const": 2,
         "rest-spread-spacing": 2,
         "template-curly-spacing": 2,
-        "yield-star-spacing": 2,
-        "one-var": [2, "never"]
+        "yield-star-spacing": 2
     }
 }
