chore: updated superdesk version 1.14.1

--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,7 @@
   ],
   "devDependencies": {
     "babel-core": "6.26.0",
-    "babel-loader": "7.1.2",
+    "babel-loader": "7.1.3",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-preset-es2015": "6.24.1",
@@ -48,9 +48,9 @@
     "grunt-open": "0.2.3",
     "grunt-template": "0.2.3",
     "grunt-usemin": "3.1.1",
-    "grunt-webpack": "^3.1.1",
+    "grunt-webpack": "3.1.1",
     "jasmine-reporters": "2.2.1",
-    "json-loader": "^0.5.4",
+    "json-loader": "0.5.4",
     "karma": "1.7.1",
     "karma-chrome-launcher": "2.2.0",
     "karma-coverage": "0.5.0",
@@ -79,41 +79,39 @@
     "test": "grunt ci:travis"
   },
   "dependencies": {
-    "adblock-detect": "^1.0.5",
-    "angular": "1.6.6",
+    "adblock-detect": "1.0.5",
+    "angular": "1.6.9",
     "angular-animate": "1.6.1",
-    "angular-bootstrap-npm": "jusopi/angular-bootstrap-npm#0.13.1",
     "angular-contenteditable": "0.3.9",
-    "angular-embed": "superdesk/angular-embed#b2b4a69",
+    "angular-embed": "superdesk/angular-embed#27a3238",
     "angular-embedly": "Urigo/angular-embedly#0.0.8",
     "angular-gettext": "2.3.10",
     "angular-messages": "1.6.6",
-    "angular-mocks": "1.6.6",
-    "angular-moment": "1.1.0",
+    "angular-mocks": "1.6.9",
+    "angular-moment": "1.2.0",
     "angular-resource": "1.6.6",
-    "angular-route": "1.6.6",
+    "angular-route": "1.6.9",
     "angular-vs-repeat": "1.1.7",
-    "bootstrap": "3.3.7",
     "eventable": "madebymany/eventable",
     "gridster": "0.5.6",
-    "jquery": "2.2.4",
+    "jquery": "3.3.1",
     "jquery-jcrop": "0.9.13",
     "jquery-ui": "components/jqueryui#1.11.4",
     "jquery.gridster": "dustmoo/gridster.js#c306335397816beceb74e4a176067baef34a0359",
-    "lodash": "4.17.4",
-    "lodash.sortbyorder": "^3.4.4",
-    "lr-infinite-scroll": "^1.0.0",
-    "medium-editor": "^5.21.0",
-    "medium-editor-tables": "^0.5.3",
-    "ment.io": "^0.9.23",
-    "moment": "2.19.3",
+    "lodash": "4.17.5",
+    "lodash.sortbyorder": "3.4.4",
+    "lr-infinite-scroll": "1.0.0",
+    "medium-editor": "5.23.3",
+    "medium-editor-tables": "0.6.1",
+    "ment.io": "0.9.23",
+    "moment": "2.20.1",
     "moment-timezone": "0.5.14",
-    "ng-file-upload": "^12.2.11",
+    "ng-file-upload": "12.2.13",
     "ng-sir-trevor": "superdesk/ng-sir-trevor",
     "rangy": "1.3.0",
-    "raven-js": "3.17.0",
+    "raven-js": "3.22.3",
     "sir-trevor": "m0g/sir-trevor-js#liveblog",
-    "superdesk-core": "superdesk/superdesk-client-core#v1.10.0"
+    "superdesk-core": "superdesk/superdesk-client-core#v1.14.1"
   },
   "engines": {
     "node": ">=6.6.0 <7.0.0",
