--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "url": "git@github.com:liveblog/liveblog.git"
   },
   "scripts": {
-    "build": "grunt build"
+    "build": "grunt build",
+    "test": "grunt ci:travis"
   },
   "licenses": [
     {
@@ -71,9 +72,6 @@
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.1"
   },
-  "scripts": {
-    "test": "grunt ci:travis"
-  },
   "dependencies": {
     "adblock-detect": "^1.0.5",
     "angular": "^1.5.8",
@@ -108,6 +106,7 @@
     "ng-sir-trevor": "superdesk/ng-sir-trevor",
     "rangy": "^1.3.0",
     "raven-js": "^3.9.1",
+    "sanitize-html": "^1.18.2",
     "sir-trevor": "m0g/sir-trevor-js#liveblog",
     "superdesk-core": "liveblog/superdesk-client-core#bd052590f93e1bcba88049cb404060c84ffa4363"
   },
