feature: update dependencies on all tasks.

--- a/server/liveblog/themes/themes_assets/default/package.json
+++ b/server/liveblog/themes/themes_assets/default/package.json
@@ -54,5 +54,8 @@
   "repository": {
     "type": "git",
     "url": "git@github.com:liveblog/liveblog-default-theme"
+  },
+  "devDependencies": {
+    "gulp-install": "^1.1.0"
   }
 }
