--- a/client/package.json
+++ b/client/package.json
@@ -108,7 +108,7 @@
     "ng-sir-trevor": "superdesk/ng-sir-trevor",
     "rangy": "^1.3.0",
     "raven-js": "^3.9.1",
-    "sir-trevor": "m0g/sir-trevor-js#liveblog",
+    "sir-trevor": "liveblog/sir-trevor-js",
     "superdesk-core": "liveblog/superdesk-client-core#bd052590f93e1bcba88049cb404060c84ffa4363"
   },
   "engines": {
