feature: changed the way that e2e are ruuned in travis.

--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,9 @@
   },
   "scripts": {
     "build": "grunt build",
-    "test": "grunt ci:travis"
+    "test": "grunt ci:travis",
+    "webdriver-update": "webdriver-manager update",
+    "e2e": "protractor protractor-conf.js"
   },
   "licenses": [
     {
