--- a/.travis.yml
+++ b/.travis.yml
@@ -96,8 +96,8 @@ script:
     - python3 manage.py register_local_themes ;
     - python3 manage.py register_bloglist ;
     - cd $TRAVIS_BUILD_DIR/client
-    - ./node_modules/.bin/webdriver-manager update
-    - ./node_modules/.bin/protractor protractor-conf.js
+    - npm run webdriver-update
+    - npm run e2e
 
 after_script:
     - killall -9 python
