--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,7 @@ server/liveblog/themes/themes_assets/*
 !server/liveblog/themes/themes_assets/classic
 !server/liveblog/themes/themes_assets/default
 !server/liveblog/themes/themes_assets/amp
+!server/liveblog/themes/themes_assets/simple
 
 # Vim stuff
 *.swo
