--- a/.travis.yml
+++ b/.travis.yml
@@ -97,7 +97,7 @@ script:
     - python3 manage.py register_bloglist ;
     - cd $TRAVIS_BUILD_DIR/client
     - npm run webdriver-update
-    - npm run e2e
+    - ./node_modules/.bin/protractor protractor-conf.js
 
 after_script:
     - killall -9 python
