--- a/client/package.json
+++ b/client/package.json
@@ -69,8 +69,8 @@
     "phantomjs": "^2.1.3",
     "protractor": "5.2.1",
     "protractor-flake": "3.0.1",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
     "request": "^2.79.0",
     "sass-loader": "6.0.6",
     "style-loader": "0.19.0",
@@ -112,7 +112,7 @@
     "raven-js": "3.22.3",
     "sanitize-html": "^1.18.2",
     "sir-trevor": "liveblog/sir-trevor-js",
-    "superdesk-core": "superdesk/superdesk-client-core#v1.14.1"
+    "superdesk-core": "superdesk/superdesk-client-core#v1.17.0"
   },
   "engines": {
     "node": ">=6.6.0 <7.0.0",
