--- a/server/liveblog/themes/themes_assets/simple/package.json
+++ b/server/liveblog/themes/themes_assets/simple/package.json
@@ -1,13 +1,17 @@
 {
-  "name": "simple",
-  "version": "0.0.2",
-  "description": "LB SEO Simple Theme",
+  "name": "liveblog-simple-theme",
+  "version": "0.1.2",
+  "description": "Liveblog SEO Simple Theme",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Aleksandar Backo Jelicic <aleksandar.jelicic@sourcefabric.org>",
   "license": "AGPL-3.0",
   "dependencies": {
     "liveblog-default-theme": "latest"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/liveblog/liveblog/tree/devel/server/liveblog/themes/themes_assets/simple"
   }
 }
