--- a/client/package.json
+++ b/client/package.json
@@ -112,7 +112,7 @@
     "raven-js": "3.22.3",
     "sanitize-html": "^1.18.2",
     "sir-trevor": "liveblog/sir-trevor-js",
-    "superdesk-core": "eos87/superdesk-client-core#angular-embed-latest"
+    "superdesk-core": "github:eos87/superdesk-client-core#v1.17.0-liveblog"
   },
   "engines": {
     "node": ">=6.6.0 <7.0.0",
