--- a/server/liveblog/prepopulate/app_prepopulate_data.json
+++ b/server/liveblog/prepopulate/app_prepopulate_data.json
@@ -92,5 +92,12 @@
         "language_code": "fr",
         "name": "Français"
     }
+},
+{
+    "resource": "config",
+    "data": {
+        "_id": "phone_home",
+        "val": {"done": 1}
+    }
 }
 ]
