--- a/server/liveblog/themes/themes_assets/default/package.json
+++ b/server/liveblog/themes/themes_assets/default/package.json
@@ -1,6 +1,6 @@
 {
   "name": "liveblog-default-theme",
-  "version": "3.3.89-beta.4",
+  "version": "3.3.9",
   "description": "Liveblog 3 SEO theme",
   "author": "Paul Solbach <psolbach@dpa-newslab.com>, Massimo Scamarcia <massimo.scamarcia@sourcefabric.org>",
   "license": "AGPL-3.0",
