LBSD-2200 Updating simple theme to use new structure from default them. - Added a new attribute to theme.json `extendsFromPackage` to know from what theme package theme is extending - added empty index.js module just to make the package discoverable with require statement

--- a/server/liveblog/themes/themes_assets/simple/package.json
+++ b/server/liveblog/themes/themes_assets/simple/package.json
@@ -1,14 +1,15 @@
 {
   "name": "liveblog-simple-theme",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Liveblog SEO Simple Theme",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Aleksandar Backo Jelicic <aleksandar.jelicic@sourcefabric.org>",
   "license": "AGPL-3.0",
+  "main": "index.js",
   "dependencies": {
-    "liveblog-default-theme": "latest"
+    "liveblog-default-theme": "^4.0.0-beta.2"
   },
   "repository": {
     "type": "git",
