--- a/server/liveblog/themes/themes_assets/amp/package.json
+++ b/server/liveblog/themes/themes_assets/amp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "liveblog-amp-theme",
-  "version": "3.3.37",
+  "version": "3.3.38",
   "description": "Liveblog 3 AMP theme",
   "author": "Sourcefabric <contact@sourcefabric.org>",
   "license": "AGPL-3.0",
@@ -9,6 +9,6 @@
     "build": "gulp"
   },
   "dependencies": {
-    "liveblog-default-theme": "latest"
+    "liveblog-default-theme": "^4.0.0-beta.2"
   }
 }
