--- a/client/package.json
+++ b/client/package.json
@@ -83,7 +83,7 @@
     "angular": "1.6.9",
     "angular-animate": "1.6.1",
     "angular-contenteditable": "0.3.9",
-    "angular-embed": "superdesk/angular-embed",
+    "angular-embed": "superdesk/angular-embed#989433327c58d0a59baa7c2448f1d08503705890",
     "angular-embedly": "Urigo/angular-embedly#0.0.8",
     "angular-gettext": "2.3.10",
     "angular-messages": "1.6.6",
