--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -12,7 +12,7 @@ pymongo>=0.4,<4.0
 google-auth-oauthlib==0.2.0
 
 # Superdesk
--e git://github.com/superdesk/superdesk-core.git@v1.17.1#egg=Superdesk-Core
+-e git://github.com/liveblog/superdesk-core.git@users-modify-command#egg=Superdesk-Core
 
 redis>=2.10.5,<3.0
 elasticsearch==1.9.0
