Fix broken tests on travis I have tried so many things on this topic. I'm listing some of them: - Putting the webdriver-update and protractor commands directly in travis.yml file - no difference as using the npm run alternative makes them run correctly after all - Update chrome driver to match current version of Chrome (v74 at the moment) - Fixed CELERY_BEAT settings as this was adding lot of noise in the logs - Found and fixed broken test connected with new modal window introduced in this release - we need to invest some time to improve some logic in the tests, like avoid using too open selectors

--- a/.travis.yml
+++ b/.travis.yml
@@ -88,6 +88,7 @@ script:
     - cd $TRAVIS_BUILD_DIR/server && nosetests --all-modules --nocapture;
     - cd $TRAVIS_BUILD_DIR/server && behave --format progress2 --logging-level ERROR ;
     - cd $TRAVIS_BUILD_DIR/server && flake8 ;
+    - cd $TRAVIS_BUILD_DIR/client && npm run lint ;
     - cd $TRAVIS_BUILD_DIR/server
     - python3 app_init_elastic.py ;
     - python3 manage.py app:initialize_data ;
@@ -95,7 +96,6 @@ script:
     - python3 manage.py register_local_themes ;
     - python3 manage.py register_bloglist ;
     - cd $TRAVIS_BUILD_DIR/client
-    - npm run lint
     - npm run webdriver-update
     - npm run e2e
 
