LBSD-2421 Completed backend logic to store tags. More progress on basic ui to manage global tags

--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,9 @@
     "@types/angular": "^1.6.54",
     "@types/bootstrap": "^3.3.42",
     "@types/jquery": "^3.3.29",
+    "@types/lodash": "^4.14.137",
     "@types/react": "^16.8.18",
+    "@types/react-select": "^3.0.2",
     "@typescript-eslint/eslint-plugin-tslint": "^1.7.0",
     "@typescript-eslint/parser": "^1.7.0",
     "bootstrap": "3.3.7",
