[misc] Adding elastic search to equation

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -32,3 +32,7 @@ jobs:
         image: redis
         ports:
           - 6379/tcp
+      elasticsearch-1.7.2:
+        image: barnybug/elasticsearch:1.7.2
+        ports: 
+          - 9200/tcp
