LBSD-785 Adjusted keys and tests to use iframely service

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -17,9 +17,7 @@ jobs:
       MAIL_USE_SSL: 0
       MAIL_DEBUG: 1
       MAIL_SUPPRESS_SEND: true
-      # Using travis encrypted keys didn't solve the issue with cross-forks Pull Requests
-      # So, we can use the test key taken from http://embed.ly/code site
-      EMBEDLY_KEY: fd92ebbc52fc43fb98f69e50e7893c13
+      IFRAMELY_KEY: ${{ secrets.IFRAMELY_KEY }}
       SUPERDESK_URL: 'http://localhost:5000/api'
       SUPERDESK_CLIENT_URL: 'http://localhost:9000'
       WEB_CONCURRENCY: 3
