--- a/docker/common.yml
+++ b/docker/common.yml
@@ -68,7 +68,7 @@ superdesk:
    - BOTO_CONFIG=/doesnotexist
    - SYNDICATION_VALIDATE_AUTH=0
    - MAIL_SUPPRESS_SEND=False
-   - EMBEDLY_KEY
+   - IFRAMELY_KEY
    - OAUTHLIB_INSECURE_TRANSPORT=1
   volumes:
    - ../results/server/unit:/opt/server/results-unit/
