Fix some eslint complains

--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -35,8 +35,7 @@
             "modules": true,
             "globalReturn": false,
             "impliedStrict": true,
-            "jsx": true,
-            "ecmaVersion": 2018
+            "jsx": true
         }
     },
 
