Implement datepicker using @atlaskit/datetimepicker plugin
The reason to move to a third-party plugin is because it takes less time for development and this plugin
achieves most of what it's needed

LBSD-2442

--- a/client/package.json
+++ b/client/package.json
@@ -81,11 +81,12 @@
     "superdesk-ui-framework": "^1.8.14",
     "ts-loader": "^3.5.0",
     "tslint": "^5.16.0",
-    "typescript": "3.4.5",
+    "typescript": "^3.9.6",
     "webpack": "3.6.0",
     "webpack-dev-server": "2.8.2"
   },
   "dependencies": {
+    "@atlaskit/datetime-picker": "^10.0.1",
     "adblock-detect": "1.0.5",
     "angular": "1.6.9",
     "angular-animate": "1.6.1",
@@ -121,6 +122,7 @@
     "react-select": "^3.0.4",
     "sanitize-html": "^1.18.2",
     "sir-trevor": "liveblog/sir-trevor-js",
+    "styled-components": "^5.1.1",
     "superdesk-core": "eos87/superdesk-client-core#v1.17.0-liveblog",
     "superdesk-ui-framework": "^1.8.13"
   },
